--- a/backend/src/main/resources/application-log.yml
+++ b/backend/src/main/resources/application-log.yml
@@ -1,12 +1,7 @@
 # 공통 설정
 logging:
   file:
-    name: ./logs/kkini.log
-  level:
-    com:
-      amazonaws:
-        util:
-          EC2MetadataUtils: error
+    name: ./logs/cavendish.log
 
 --- # local 설정
 spring:
@@ -17,7 +12,7 @@ spring:
 logging:
   level:
     root: info    # 스프링 라이브러리의 로그는 info부터 출력
-    com.kkini.core: debug   # 프로젝트 로그는 debug부터 출력
+    com.windows33.com.windows33.cavendish: debug   # 프로젝트 로그는 debug부터 출력
     org:
       hibernate:
         type:
