--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass --no-source-map --watch src/styles/scss:src/styles/css"
+    "sass": "sass --no-source-map --watch -r src/styles/scss:src/styles/css"
   },
   "eslintConfig": {
     "extends": [
