--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.67.0"
   }
 }
