--- a/backend/src/main/resources/application-db.yml
+++ b/backend/src/main/resources/application-db.yml
@@ -11,7 +11,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update    # 실행시 DB 초기화 후 DDL 실행
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true  # SQL 쿼리 보기 좋게 표시
@@ -34,7 +34,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none      # 실행시 DB 그대로
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: false # SQL 쿼리 보기 좋게 표시 X
