feat : package.json 변경

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run sass-default && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass --no-source-map --watch src/styles/scss:src/styles/css"
+    "sass": "sass --no-source-map --watch src/styles/scss:src/styles/css",
+    "sass-default": "sass --no-source-map src/styles/scss:src/styles/css"
   },
   "eslintConfig": {
     "extends": [
