feat: 글 수정 인터페이스 기능 구현 완료

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+	// File
+	implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
+
 }
 
 tasks.named('test') {
