--- a/.gitignore
+++ b/.gitignore
@@ -164,8 +164,8 @@ sketch
 
 ### Gradle ###
 .gradle
-**/build/
-!src/**/build/
+# **/build/
+# !src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
