feat: 빌드 깃 업로드

--- a/.gitignore
+++ b/.gitignore
@@ -164,8 +164,9 @@ sketch
 
 ### Gradle ###
 .gradle
-# **/build/
-# !src/**/build/
+**/build/
+!**/build/libs/
+
 
 # Ignore Gradle GUI config
 gradle-app.setting
