--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar
 *.war
 *.nar
 *.ear
@@ -164,8 +164,8 @@ sketch
 
 ### Gradle ###
 .gradle
- **/build/
- !**/build/libs/
+**/build/
+!**/build/libs/
 
 
 # Ignore Gradle GUI config
