refactor : 추천 플로우 개선 및 CSS작업

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,4 @@
 REACT_APP_API = https://j9c105.p.ssafy.io/api
 # REACT_APP_API = https://localhost:5000/api
 
-# REACT_APP_FAPI = https://j9c105.p.ssafy.io/fapi
-REACT_APP_FAPI = http://localhost:8000/fapi
+REACT_APP_FAPI = https://j9c105.p.ssafy.io/fapi
