--- a/backend/src/main/resources/application-db.yml
+++ b/backend/src/main/resources/application-db.yml
@@ -19,8 +19,8 @@ spring:
 
   datasource:
     url: jdbc:mariadb://localhost:3306/s09p22c105
-    username: S09P22C105
-    password: S09P22C105
+    username: {database.username}
+    password: {database.password}
 
   sql:
     init:
